# SRLCD

./: CMakeLists.txt
fftw-3.3.8/: FFTW3Config.cmake  FFTW3fConfig.cmake  Makefile  config.status  fftw3.pc  libtool
fftw-3.3.8/api/: Makefile
fftw-3.3.8/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mkprinter-str.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-dft.Plo  (+26 more)
fftw-3.3.8/dft/: Makefile
fftw-3.3.8/doc/: Makefile
fftw-3.3.8/genfft/: Makefile
fftw-3.3.8/kernel/: Makefile
fftw-3.3.8/libbench2/: Makefile
fftw-3.3.8/m4/: Makefile
fftw-3.3.8/mpi/: Makefile
fftw-3.3.8/rdft/: Makefile
fftw-3.3.8/reodft/: Makefile
fftw-3.3.8/simd-support/: Makefile
fftw-3.3.8/support/: Makefile
fftw-3.3.8/tests/: Makefile
fftw-3.3.8/threads/: Makefile
fftw-3.3.8/tools/: Makefile
src/: LoopClass.h  Util.h  debug.h  kcc.cpp  kcc.h  main.cpp  saliency_detection.cpp  saliency_region.h
(+434 files in other folders)
